--- a/templates/index.html
+++ b/templates/index.html
@@ -42,8 +42,8 @@
                                     </div>
                                     <div class="IndexInfo2">
                                         <input type='hidden' name='plant_id' value='{{ plant[0]}}'>
-                                        <input type="number" name="quantity" value="1" min="1" max="{{ plant[2] }}">
-                                        <button name="submit" value="submit" type="submit">Add</button>
+                                        <input type="number" name="quantity" value="1" min="1" max="{{ plant[2] }}" style="width: 75px">
+                                        <button name="submit" value="submit" type="submit"><img src="/static/add.svg" alt="add" height="25"></button>
                                     </div>
                                     <div class="IndexInfo3">
                                         <div name="{{ plant[5] }}">Description: {{ plant[5] }}</div>
@@ -73,8 +73,8 @@
                                     </div>
                                     <div class="IndexInfo2">
                                         <input type='hidden' name='plant_id' value='{{ plant[0]}}'>
-                                        <input type="number" name="quantity" value="1" min="1" max="{{ plant[2] }}">
-                                        <button name="submit" value="submit" type="submit">Add</button>
+                                        <input type="number" name="quantity" value="1" min="1" max="{{ plant[2] }}" style="width: 75px">
+                                        <button name="submit" value="submit" type="submit"><img src="/static/add.svg" alt="add" height="25"></button>
                                     </div>
                                     <div class="IndexInfo3">
                                         <div name="{{ plant[5] }}">Description: {{ plant[5] }}</div>
