--- a/templates/signup.html
+++ b/templates/signup.html
@@ -18,12 +18,14 @@
     <form action="/signup" method="post" enctype="multipart/form-data">
         <div class="SignupMain">
             <div>
-                <input id="username" autocomplete="off" autofocus class="form-control" name="username" placeholder="Username (2 - 20 char)." type="text">
-                <input id="email" autocomplete="off" autofocus class="form-control" name="email" placeholder="Email." type="text">
+                <input id="username" autocomplete="off" autofocus class="form-control" name="username" placeholder="Username (2 - 20 char)." type="text" size="35">
             </div>
             <div>
-                <input id="password" name="password" placeholder="Password (7 to 15 char, min 1 numeric & special)." type="password" size="50">
-                <input id="confirm-pass" name="confirm-password" placeholder="Confirm Password" type="password" size="50">  
+                <input id="email" autocomplete="off" autofocus class="form-control" name="email" placeholder="Email." type="text" size="35">
+            </div>
+            <div>
+                <input id="password" name="password" placeholder="Password (7 to 15 char, min 1 numeric & special)." type="password" size="35">
+                <input id="confirm-pass" name="confirm-password" placeholder="Confirm Password" type="password" size="35">  
             </div>
             <div>         
                 <input type="file" id="picture" name="picture">
