--- a/static/styles.css
+++ b/static/styles.css
@@ -36,7 +36,8 @@ main {
 	align-content: stretch;
 	list-style: none;
 
-	background-color: #E8E8E8;
+	background: rgb(255,255,255);
+	background: linear-gradient(90deg, rgba(255,255,255,0.2) 0%, rgba(55,161,125,0.1) 33%, rgba(9,115,58,0.2) 66%, rgba(14,61,45,0.3) 100%);
 	height: 100px;
 }
 
@@ -281,11 +282,14 @@ main {
 	flex-direction: column;
 	flex-wrap: nowrap;
 	justify-content: space-around;
-	align-items: baseline;
+	align-items: center;
 	align-content: center;
 
 	width: 500px;
 	height: 500px;
+	border-radius: 25px;
+	border: 2px solid #E8E8E8;
+	padding: 20px; 
 }
 
 .SigninMain {
@@ -296,8 +300,31 @@ main {
 	align-items: center;
 	align-content: center;
 
-	width: 250px;
+	width: 500px;
 	height: 250px;
+	border-radius: 25px;
+	border: 2px solid #E8E8E8;
+	padding: 20px; 
 }
+
+
+/*  TOOLTIP */
+
+
+div.click-to-top span {
+	display: none; 
+	position: absolute; 
+	background: transparent;
+	color: #09733A;
+	font-size: 0.8em;
+	font-weight: bold;
+	margin-left: 12.5px;
+}
+
+div.click-to-top:hover span {
+	display: block;
+	width: auto;
+}
+
 
 
