--- a/templates/signin.html
+++ b/templates/signin.html
@@ -16,10 +16,10 @@
     <form action="/signin" method="post">
         <div class="SigninMain">
             <div>
-                <input autocomplete="off" autofocus class="form-control" name="username" placeholder="Username" type="text">
+                <input autocomplete="off" autofocus class="form-control" name="username" placeholder="Username" type="text" size="35">
             </div>
             <div>
-                <input name="password" placeholder="Password" type="password">
+                <input name="password" placeholder="Password" type="password" size="35">
             </div>
             <button type="submit">Log In</button>
             <br>
