--- a/templates/administration.html
+++ b/templates/administration.html
@@ -13,37 +13,39 @@
 {% endblock %}
 
 {% block main %}
-    <form action="/administration" method="post">
-        <table class="TableMain">
-            <thead>
-                <tr>
-                    <th scope="col">Name</th>
-                    <th scope="col">Stock</th>
-                    <th scope="col">Price</th>
-                    <th scope="col">Picture</th>
-                    <th scope="col">Show</th>
-                </tr>
-            </thead>
-
-            <tbody>
-                {% for plant in plants %}
+    <div class="TableBorder">
+        <form action="/administration" method="post">
+            <table class="TableMain">
+                <thead>
                     <tr>
-                        <td>{{ plant[1] | safe }}</td>
-                        <td>{{ plant[2] | safe }}</td>
-                        <td>{{ plant[3] | safe }}</td>
-                        <td><img src="{{ plant[4] | safe }}" alt="plant picture of {{ plant[1] }}" height="50"></td>
-                        <td>{{ plant[6] | safe }}</td>
-                        <td><button name="delete" value="{{ plant[0] }}" type="submit">Delete</button></td>
-                        <td><button name="edit" value="{{ plant[0] }}" type="submit">Edit</button></td>
+                        <th scope="col">Name</th>
+                        <th scope="col">Stock</th>
+                        <th scope="col">Price</th>
+                        <th scope="col">Picture</th>
+                        <th scope="col">Show</th>
                     </tr>
-                {% endfor %}
-            </tbody>
-        </table>
-        <div>
-            <a href="/add">Add plant</a>
-        </div>
-    </form>
+                </thead>
 
+                <tbody>
+                    {% for plant in plants %}
+                        <tr>
+                            <td>{{ plant[1] | safe }}</td>
+                            <td>{{ plant[2] | safe }}</td>
+                            <td>{{ plant[3] | safe }}</td>
+                            <td><img src="{{ plant[4] | safe }}" alt="plant picture of {{ plant[1] }}" height="50"></td>
+                            <td>{{ plant[6] | safe }}</td>
+                            <td><button name="delete" value="{{ plant[0] }}" type="submit"><img src="/static/trash.svg" alt="delete" height="25"></button></td>
+                            <td><button name="edit" value="{{ plant[0] }}" type="submit"><img src="/static/updateB.svg" alt="edit" height="25"></button></td>
+                        </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
+            <br>
+            <div>
+                <a href="/add"><img src="/static/add.svg" alt="add" height="50"></a>
+            </div>
+        </form>
+    </div>
     <br>
     <div>
         <a href="/">Back</a>
