--- a/templates/layout.html
+++ b/templates/layout.html
@@ -111,7 +111,7 @@
                     <div>
                         Follow us: 
                     </div>
-                    <div>
+                    <div class="FooterSocial">
                         <a href="https://www.instagram.com/crazyplantcrew"><img src="/static/insta.svg" alt="instagram" height="50"></a><br>
                         <a href="https://youtube.com/channel/UCcpvtx2PUXIBgLY_tIPX9Sw"><img src="/static/youtube.svg" alt="youtube" height="50"></a>
                     </div>
