--- a/templates/profile.html
+++ b/templates/profile.html
@@ -13,23 +13,25 @@
 {% endblock %}
     
 {% block main %}
-    <div>
-        <a href="/username">Change Username</a>
-    </div>
-    <div>
-        <a href="/password">Change Password</a>
-    </div>
-    <div>
-        <a href="/email">Change Email</a>
-    </div>
-    <div>
-        <a href="/picture">Change Picture</a>
-    </div>
-    <div>
-        <a href="/mailing">Mailing option</a>
-    </div>
-    <div>
-        <a href="/delete">Delete Account</a>
+    <div class="ProfileMain">
+        <div>
+            <a href="/username"><img src="/static/profile.svg" alt="username" height="50">   Change Username</a>
+        </div>
+        <div>
+            <a href="/password"><img src="/static/password.svg" alt="password" height="50">   Change Password</a>
+        </div>
+        <div>
+            <a href="/email"><img src="/static/contact.svg" alt="contact" height="50">   Change Email</a>
+        </div>
+        <div>
+            <a href="/picture"><img src="/static/photo.svg" alt="photo" height="50">   Change Picture</a>
+        </div>
+        <div>
+            <a href="/mailing"><img src="/static/updateA.svg" alt="mailing" height="50">   Mailing option</a>
+        </div>
+        <div>
+            <a href="/delete"><img src="/static/trash.svg" alt="trash" height="50">   Delete Account</a>
+        </div>
     </div>
     <br>
     <div>
