--- a/templates/signin.html
+++ b/templates/signin.html
@@ -21,7 +21,7 @@
             <div>
                 <input name="password" placeholder="Password" type="password" size="35">
             </div>
-            <button type="submit">Log In</button>
+            <button type="submit"><img src="/static/login.svg" alt="login" height="50"></button>
             <br>
             <a href="/forget">forgot password?</a>
         </div>
