--- a/static/styles.css
+++ b/static/styles.css
@@ -128,6 +128,15 @@ main {
 	align-content: center;
 }
 
+.FooterSocial {
+	display: flex;
+	flex-direction: row;
+	flex-wrap: nowrap;
+	justify-content: space-around;
+	align-items: center;
+	align-content: center;
+}
+
 
 /*  MAP */
 
@@ -228,7 +237,6 @@ main {
 /*  FLASH */
 
 
-
 .FlashMain {
 	display: flex;
 	flex-direction: row;
@@ -271,6 +279,12 @@ main {
 
 .TableMain {
 	width: 1000px;
+}
+
+.TableBorder {
+	border-radius: 25px;
+	border: 2px solid #E8E8E8;
+	padding: 20px; 
 }
 
 
@@ -327,4 +341,49 @@ div.click-to-top:hover span {
 }
 
 
+/*  BUTTON */
 
+
+button {
+	background-color: transparent;
+	border: none;	
+}
+
+
+/*  NEWSLETTER */
+
+
+.NewsletterMain {
+	height: 600px;
+	border-radius: 25px;
+	border: 2px solid #E8E8E8;
+	padding: 20px; 
+}
+
+
+/*  MESSAGE */
+
+
+.MessageMain {
+	height: 450px;
+	border-radius: 25px;
+	border: 2px solid #E8E8E8;
+	padding: 20px; 
+}
+
+
+/*  PROFILE */
+
+
+.ProfileMain {
+	display: flex;
+	flex-direction: column;
+	flex-wrap: nowrap;
+	justify-content: space-around;
+	align-items: flex-start;
+	align-content: center;
+
+	border-radius: 25px;
+	border: 2px solid #E8E8E8;
+	padding: 20px; 
+}
