--- a/templates/signup.html
+++ b/templates/signup.html
@@ -36,7 +36,7 @@
                 <input type="checkbox" id="cookies" name="cookies" value="Accept cookies">
                 <label for="cookies">Accept website cookies</label><br>
             </div>
-            <button id="submit" type="submit">Sign Up</button>
+            <button id="submit" type="submit"><img src="/static/login.svg" alt="login" height="50"></button>
         </div>
     </form>
 
