--- a/templates/delete.html
+++ b/templates/delete.html
@@ -14,9 +14,13 @@
 
 {% block main %}
     <form action="/delete" method="post">
-        <div>
-            <p>Delete your account.</p>
-            <button id="deleteAccount" name="deleteAccount" type="submit">Delete</button>
+        <div class="DeleteMain">
+            <div>
+                <p>Delete your account?</p>
+            </div>
+            <div>
+                <button id="deleteAccount" name="deleteAccount" type="submit">Delete</button>
+            </div>
         </div>
     </form>
     <br>
