--- a/templates/password.html
+++ b/templates/password.html
@@ -14,13 +14,18 @@
 
 {% block main %}
     <form action="/password" method="post">
-        <div>
-            <p>Password (7 to 15 characters, 1 numeric, 1 special).</p>
-            <input id="password" name="password" placeholder="Password" type="password">
-        </div>
-        <div>
-            <input id="confirm-pass" name="confirm-password" placeholder="Confirm Password" type="password">
-            <button id="updatePassword" type="submit">Update</button>
+        <div class="PasswordMain">
+            <div>
+                <input id="password" name="password" type="password" placeholder="Password (7 to 15 char, min 1 numeric & special)." size="35">
+            </div>
+            <br>
+            <div>
+                <input id="confirm-pass" name="confirm-password" placeholder="Confirm Password" type="password" size="35">
+            </div>
+            <br>
+            <div>
+                <button id="updatePassword" type="submit">Update</button>
+            </div>
         </div>
     </form>
     <br>
