--- a/templates/signup.html
+++ b/templates/signup.html
@@ -24,8 +24,10 @@
                 <input id="email" autocomplete="off" autofocus class="form-control" name="email" placeholder="Email." type="text" size="35">
             </div>
             <div>
-                <input id="password" name="password" placeholder="Password (7 to 15 char, min 1 numeric & special)." type="password" size="35">
-                <input id="confirm-pass" name="confirm-password" placeholder="Confirm Password" type="password" size="35">  
+                <input id="password" name="password" placeholder="Password (7 to 15 char, min 1 numeric & special)." type="password" size="35">  
+            </div>
+            <div>
+                <input id="confirm-pass" name="confirm-password" placeholder="Confirm Password" type="password" size="35">
             </div>
             <div>         
                 <input type="file" id="picture" name="picture">
