--- a/templates/username.html
+++ b/templates/username.html
@@ -14,10 +14,14 @@
 
 {% block main %}
     <form action="/username" method="post">
-        <div>
-            <p>Username (between 2 & 20 characters).</p>
-            <input id="username" autocomplete="off" autofocus class="form-control" name="username" placeholder="Username" type="text">
-            <button id="updateUsername" type="submit">Update</button>
+        <div class="UsernameMain">
+            <div>
+                <input id="username" autocomplete="off" autofocus class="form-control" name="username" placeholder="Username (2 - 20 char)." type="text">
+            </div>
+            <br>
+            <div>
+                <button id="updateUsername" type="submit">Update</button>
+            </div>
         </div>
     </form>
     <br>
