--- a/templates/email.html
+++ b/templates/email.html
@@ -14,7 +14,7 @@
 
 {% block main %}
     <form action="/email" method="post">
-        <div class="PasswordMain">
+        <div class="EmailMain">
             <div>
                 <input id="email" autocomplete="off" autofocus class="form-control" name="email" placeholder="Email" type="text">
             </div>
